// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Drawing Layer Components Ellipse adds a ellipse 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      class="transformable transformable-ellipse"
      transform="translate(20,20) rotate(0) translate(-10,-10) scale(1,1)"
    >
      <ellipse
        class="drawing-object"
        cx="0"
        cy="0"
        fill="#cccccc"
        pointer-events="visible"
        rx="10"
        ry="10"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Ellipse deletes a ellipse 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  />
</svg>
`;

exports[`Drawing Layer Components Ellipse moves a ellipse 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      class="transformable transformable-ellipse"
      transform="translate(15,15) rotate(0) translate(-10,-10) scale(1,1)"
    >
      <ellipse
        class="drawing-object"
        cx="0"
        cy="0"
        fill="#cccccc"
        pointer-events="visible"
        rx="10"
        ry="10"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Freehand Line adds a freehand line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      class="transformable transformable-line"
      transform="translate(13,13) rotate(0) translate(-3,-3) scale(1,1)"
    >
      <path
        class="drawing-object"
        d="M 0 0 l 1 1 l 2 2"
        data-object-id="123"
        fill="none"
        fill-rule="nonzero"
        pointer-events="visible"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Freehand Line deletes a freehand line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  />
</svg>
`;

exports[`Drawing Layer Components Freehand Line moves a freehand line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      class="transformable transformable-line"
      transform="translate(8,8) rotate(0) translate(-3,-3) scale(1,1)"
    >
      <path
        class="drawing-object"
        d="M 0 0 l 1 1 l 2 2"
        data-object-id="123"
        fill="none"
        fill-rule="nonzero"
        pointer-events="visible"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Image adds an image 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      class="transformable transformable-image"
      transform="translate(20,20) rotate(0) translate(-10,-10) scale(1,1)"
    >
      <image
        height="10"
        href="my/image/url"
        pointer-events="visible"
        preserveAspectRatio="none"
        width="10"
        x="0"
        y="0"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Image deletes a image 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  />
</svg>
`;

exports[`Drawing Layer Components Image moves a image 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      class="transformable transformable-image"
      transform="translate(15,15) rotate(0) translate(-10,-10) scale(1,1)"
    >
      <image
        height="10"
        href="my/image/url"
        pointer-events="visible"
        preserveAspectRatio="none"
        width="10"
        x="0"
        y="0"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Rectangle adds a Rectangle 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      class="transformable transformable-rectangle"
      transform="translate(20,20) rotate(0) translate(-10,-10) scale(1,1)"
    >
      <rect
        class="drawing-object rectangle"
        fill="#cccccc"
        height="10"
        pointer-events="visible"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
        width="10"
        x="0"
        y="0"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Rectangle deletes a rectangle 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  />
</svg>
`;

exports[`Drawing Layer Components Rectangle moves a rectangle 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      class="transformable transformable-rectangle"
      transform="translate(15,15) rotate(0) translate(-10,-10) scale(1,1)"
    >
      <rect
        class="drawing-object rectangle"
        fill="#cccccc"
        height="10"
        pointer-events="visible"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
        width="10"
        x="0"
        y="0"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Vector line adds a Vector line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      class="transformable transformable-vector"
      transform="translate(20,20) rotate(0) translate(-10,-10) scale(1,1)"
    >
      <g
        class="vector"
        fill="#888888"
        pointer-events="visible"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
      >
        <line
          class="drawing-object"
          x1="0"
          x2="10"
          y1="0"
          y2="10"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Vector line deletes a vector line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  />
</svg>
`;

exports[`Drawing Layer Components Vector line moves a vector line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      class="transformable transformable-vector"
      transform="translate(15,15) rotate(0) translate(-10,-10) scale(1,1)"
    >
      <g
        class="vector"
        fill="#888888"
        pointer-events="visible"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
      >
        <line
          class="drawing-object"
          x1="0"
          x2="10"
          y1="0"
          y2="10"
        />
      </g>
    </g>
  </g>
</svg>
`;
